--- a/src/app/coupon/coupon.component.html
+++ b/src/app/coupon/coupon.component.html
@@ -1,12 +1,11 @@
-<h1>Our BIG saving Coupons are here!</h1>
 <table class="table">
   <thead>
-    <tr>
-      <th>Coupon Code</th>
-      <th>Discount</th>
+    <tr style="background-color: rgb(2, 107, 243)">
+      <th style="color:rgb(250, 250, 250)">Coupon Code</th>
+      <th style="color:rgb(250, 250, 250)">Discount</th>
       <th></th>
     </tr>
-  </thead> 
+  </thead>  
   <tbody>
     <tr *ngFor="let coupon of coupons$ | async">
       <td>{{ coupon.coupon}}</td>
@@ -16,3 +15,12 @@
     </tr>
   </tbody> 
 </table>
+
+<!-- <h1 style="color:rgb(2, 107, 243)">Our BIG saving Coupons are here!</h1>
+<ng-container *ngFor="let c of coupons$ | async">
+  <div class="col">
+    <coupon-card [targetCoupon]="c"></coupon-card>
+  </div>
+
+<div *ngIf="(i + 1) % 4 === 0" class="w-100"></div>
+</ng-container>  -->
