added functionality to icons below members' names

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -24,20 +24,14 @@
 					<img src="https://media.licdn.com/dms/image/C5603AQG2SUrIY8lQYQ/profile-displayphoto-shrink_800_800/0?e=1529305200&v=beta&t=uHDu34_X--x6CLjaBhkPT0pxPiQ4VlSCuF7Dsv1yx4w">
 				</div>
 				<div class="col-md-12 section2">
-					<p>Abraham Tesfay</p><br>
-					<h1>Team Leader</h1><br>
-				</div>
-				<div class="col-md-12 section3">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-					</p>
+          <p>Abraham Tesfay</p><br>
+          <br><h1>Project Manager</h1><br>
 				</div>
 				<div class="col-md-12 section4">
-					<i class="fa fa-facebook-official" aria-hidden="true"></i>
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<i class="fa fa-google-plus" aria-hidden="true"></i>
-					<i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="https://www.facebook.com/abrahamktesfay?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/atesfay"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/abraham-tesfay-a1164434/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="abraham.atesfay@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
       </div>
     </div>
@@ -51,19 +45,13 @@
 				</div>
 				<div class="col-md-12 section2">
 					<p>Chad Gorham</p><br>
-					<h1>Documentation & Technical Lead</h1><br>
-				</div>
-				<div class="col-md-12 section3">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-					</p>
+					<h1>Technical Writer & Software Architecture</h1><br>
 				</div>
 				<div class="col-md-12 section4">
-					<i class="fa fa-facebook-official" aria-hidden="true"></i>
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<i class="fa fa-google-plus" aria-hidden="true"></i>
-					<i class="fa fa-envelope" aria-hidden="true"></i>
+					<a href="https://www.facebook.com/GorhamChad?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/ChadGorham"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/chad-gorham-30b59511a/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="gorhamchadsbhs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
 			</div>
     </div>
@@ -77,20 +65,15 @@
 					<img src="https://sjsu.instructure.com/images/thumbnails/47561065/nFD4DYxCn0HUVyGSRzNRQVTB4IVei6xPVhSThc0r">
 				</div>
 				<div class="col-md-12 section2">
-					<p>Yunjun Ma</p><br>
-					<h1>Software Design Lead & Marketing</h1>
-				</div>
-				<div class="col-md-12 section3">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-					</p>
+          <p>Yunjun Ma</p><br>
+          <br>
+					<h1>Software Design & Marketing</h1>
 				</div>
 				<div class="col-md-12 section4">
-					<i class="fa fa-facebook-official" aria-hidden="true"></i>
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<i class="fa fa-google-plus" aria-hidden="true"></i>
-					<i class="fa fa-envelope" aria-hidden="true"></i>
+					<a href="https://www.facebook.com/yunjun.ma"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/yunjunma"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/yunjun-ma-6641a144/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="yunjunma@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
 			</div>
 		</div>
@@ -105,19 +88,13 @@
           </div>
           <div class="col-md-12 section2">
             <p>Richard Liu</p><br>
-            <h1>Software Design & Technical Lead</h1><br>
-          </div>
-          <div class="col-md-12 section3">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
+            <h1>Software Design & Software Architecture</h1><br>
           </div>
           <div class="col-md-12 section4">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-google-plus" aria-hidden="true"></i>
-            <i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="https://www.facebook.com/profile.php?id=100002678203533"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/GitHubForRichard"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/richard-che-liu/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="richard14942003@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -131,19 +108,14 @@
           </div>
           <div class="col-md-12 section2">
             <p>Sophia Tan</p><br>
-            <h1>Documentation & Software Testing</h1><br>
-          </div>
-          <div class="col-md-12 section3">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
+            <br>
+            <h1>Technical Writer & Software Tester</h1><br>
           </div>
           <div class="col-md-12 section4">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-google-plus" aria-hidden="true"></i>
-            <i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="https://www.facebook.com/sophia.tan.549?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/sophiastan"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/sophia-tan/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="sophia.tan@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -157,25 +129,19 @@
           </div>
           <div class="col-md-12 section2">
             <p>Tommy Xu</p><br>
-            <h1>Software Design & Technical</h1>
-          </div>
-          <div class="col-md-12 section3">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-            </p>
+            <h1>Software Design & Software Architecture</h1>
           </div>
           <div class="col-md-12 section4">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-            <i class="fa fa-google-plus" aria-hidden="true"></i>
-            <i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="https://www.facebook.com/TommyXu0814"><i class="fa fa-facebook-square fa-2x"></i></a>
+          <a href="https://github.com/Tommy0814"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/tommy-jing-xu/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+					<a href="tommyxu0814@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
     </div>
 
-
+    https://github.com/goldfishyyy
 
     <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
@@ -185,19 +151,13 @@
             </div>
             <div class="col-md-12 section2">
               <p>Yanyan Yang</p><br>
-              <h1>Marketing Lead & Software Testing</h1><br>
-            </div>
-            <div class="col-md-12 section3">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-              </p>
+              <h1>Marketing Lead & Software Tester</h1><br>
             </div>
             <div class="col-md-12 section4">
-              <i class="fa fa-facebook-official" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-google-plus" aria-hidden="true"></i>
-              <i class="fa fa-envelope" aria-hidden="true"></i>
+              <a href="https://www.facebook.com/yanyan.yang.88"><i class="fa fa-facebook-square fa-2x"></i></a>
+              <a href="https://github.com/goldfishyyy"><i class="fa fa-github fa-2x"></i></a>
+              <a href="https://www.linkedin.com/in/yanyan-yang-20b614148/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+              <a href="yanyan.yang@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
             </div>
           </div>
         </div>
@@ -220,19 +180,13 @@
             </div>
             <div class="col-md-12 section2">
               <p>Jeffrey Hu</p><br>
-              <h1>Software Design & Software Testing</h1>
-            </div>
-            <div class="col-md-12 section3">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-              </p>
+              <h1>Software Design & Software Tester</h1>
             </div>
             <div class="col-md-12 section4">
-              <i class="fa fa-facebook-official" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-google-plus" aria-hidden="true"></i>
-              <i class="fa fa-envelope" aria-hidden="true"></i>
+              <a href="https://www.facebook.com/jeffrey.zhang2"><i class="fa fa-facebook-square fa-2x"></i></a>
+              <a href="https://github.com/jeff96hcs"><i class="fa fa-github fa-2x"></i></a>
+              <a href="https://www.linkedin.com/in/jeffrey-hu-87963b117/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+              <a href="jeff96hcs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
             </div>
           </div>
         </div>
