changed yanyan's profile picture

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -147,7 +147,7 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="row section-success ourTeam-box text-center">
             <div class="col-md-12 section1">
-              <img src="https://sjsu.instructure.com/images/thumbnails/44680214/Jx5bSx6aQq9zzEquAiOqgwxDFbunCcRYCykyvfUI">
+              <img src="https://media.licdn.com/dms/image/C4E03AQEB_L6ThGo-DA/profile-displayphoto-shrink_800_800/0?e=1529694000&v=beta&t=AQbAzXC2M08xXktg2E5UMuIhI9VRX4KPRMxXi2r68zk">
             </div>
             <div class="col-md-12 section2">
               <p>Yanyan Yang</p><br>
