added mailto for envelope icons, removed unnecessary line

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -31,7 +31,7 @@
           <a href="https://www.facebook.com/abrahamktesfay?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/atesfay"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/abraham-tesfay-a1164434/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="abraham.atesfay@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:abraham.atesfay@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
       </div>
     </div>
@@ -51,7 +51,7 @@
 					<a href="https://www.facebook.com/GorhamChad?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/ChadGorham"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/chad-gorham-30b59511a/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="gorhamchadsbhs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:gorhamchadsbhs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
 			</div>
     </div>
@@ -73,7 +73,7 @@
 					<a href="https://www.facebook.com/yunjun.ma"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/yunjunma"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/yunjun-ma-6641a144/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="yunjunma@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:yunjunma@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
 				</div>
 			</div>
 		</div>
@@ -94,7 +94,7 @@
           <a href="https://www.facebook.com/profile.php?id=100002678203533"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/GitHubForRichard"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/richard-che-liu/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="richard14942003@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:richard14942003@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
           <a href="https://www.facebook.com/sophia.tan.549?ref=br_rs"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/sophiastan"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/sophia-tan/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="sophia.tan@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:sophia.tan@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -135,13 +135,12 @@
           <a href="https://www.facebook.com/TommyXu0814"><i class="fa fa-facebook-square fa-2x"></i></a>
           <a href="https://github.com/Tommy0814"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/tommy-jing-xu/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-					<a href="tommyxu0814@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+					<a href="mailto:tommyxu0814@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
           </div>
         </div>
       </div>
     </div>
 
-    https://github.com/goldfishyyy
 
     <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
@@ -157,7 +156,7 @@
               <a href="https://www.facebook.com/yanyan.yang.88"><i class="fa fa-facebook-square fa-2x"></i></a>
               <a href="https://github.com/goldfishyyy"><i class="fa fa-github fa-2x"></i></a>
               <a href="https://www.linkedin.com/in/yanyan-yang-20b614148/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-              <a href="yanyan.yang@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
+              <a href="mailto:yanyan.yang@sjsu.edu"><i class="fa fa-envelope fa-2x"></i></a>
             </div>
           </div>
         </div>
@@ -186,7 +185,7 @@
               <a href="https://www.facebook.com/jeffrey.zhang2"><i class="fa fa-facebook-square fa-2x"></i></a>
               <a href="https://github.com/jeff96hcs"><i class="fa fa-github fa-2x"></i></a>
               <a href="https://www.linkedin.com/in/jeffrey-hu-87963b117/"><i class="fa fa-linkedin-in fa-2x"></i></a>
-              <a href="jeff96hcs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+              <a href="mailto:jeff96hcs@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
             </div>
           </div>
         </div>
