Added an "Add" button in the order history

--- a/src/app/admin/components/admin-coupon/admin-coupon.component.html
+++ b/src/app/admin/components/admin-coupon/admin-coupon.component.html
@@ -1,4 +1,7 @@
-<!-- Jun -->
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">Admin Coupon Page</span>
+</div>
 <p class="pt-2">
   <a routerLink="/admin/coupon/new" class="btn btn-primary">New Coupon</a>
 </p>
