--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -1,4 +1,7 @@
-<h1>All Orders in the System</h1>
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">All Orders in the System</span>
+</div>
 <table class="table">
     <thead>
       <tr>
