--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -1,4 +1,7 @@
-
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">Product Editing</span>
+</div>
 <!-- The column that takes half of the page -->
 <!-- Boostrap devided the screen in 12 columns -->
 <!-- 6 columns will be considered half -->
