--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,12 +4,13 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
+<br><br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">Profile</span>
+</div>
 <body>
-
-    <h1 style="text-align:center; font-size: 50px;font-weight: 900;">User Profile</h1>
     <!-- The profile picture will the default image if the image url is invalid provided by users -->
-    <div style="margin-top: 50px;" class="row">
+    <div style="margin-top: 5px;" class="row">
         <!-- Take 3 out of 12 columns of the page -->
         <!-- around 25% of the page for catelog -->
         <div style="text-align: center;" class="col-4">
