--- a/src/app/shopping/components/my-orders/my-orders.component.html
+++ b/src/app/shopping/components/my-orders/my-orders.component.html
@@ -1,4 +1,7 @@
-<h1>Orders</h1>
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">My Orders</span>
+</div>
 <table class="table">
   <thead>
     <tr>
