--- a/src/app/admin/components/coupon-form/coupon-form.component.html
+++ b/src/app/admin/components/coupon-form/coupon-form.component.html
@@ -1,3 +1,7 @@
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">Coupon Editing</span>
+</div>
 <div class="row">
   <!-- left partition -->
   <div class="col-md-6">
