--- a/src/app/shopping/components/order-success/order-success.component.html
+++ b/src/app/shopping/components/order-success/order-success.component.html
@@ -27,9 +27,10 @@
   </div>
 </div> -->
 
-<h1>
-    Order Details
-  </h1>
+<br>
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+  <span class="title-section" style="font-family: Raleway">Order has been placed. Thanks you very much!</span>
+</div>
   <div class="row">
     <div class="col-6">
         <div class="card">
