--- a/src/app/coupon/coupon.component.html
+++ b/src/app/coupon/coupon.component.html
@@ -1,5 +1,10 @@
 <link href="https://fonts.googleapis.com/css?family=Cabin|Exo+2|Oxygen" rel="stylesheet">
 
+<br>
+<div style="padding-bottom: 15px; display: inline-block">
+    <span class="title-section" style="font-family: Raleway;">Coupons</span>
+</div>
+
 <table class="table" style="font-family: Cabin">
     <thead style="font-family: Oxygen">
         <tr style="background-color: #b2b0b0 ">
