--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -11,6 +11,11 @@
     transition: 0.3s;
 }
 
+.navbar-light .navbar-nav .nav-link 
+{
+color: white;
+}
+
 .scrolled {
     background-color: white;
     transition: 0.3s;
@@ -54,6 +59,7 @@ img:focus {
     border: solid 3px grey;
 }
 
-.nav-link:hover {
-    border-bottom: soild 2px #1E90FF;
+.nav-link:hover, .nav-link:focus {
+    border-bottom: solid 2px;
+    text-decoration: none;
 }
